Made server and client work

--- a/server.ipynb
+++ b/server.ipynb
@@ -12,12 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "id": "4db8406f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import send_receive\n",
+    "from send_receive import *\n",
     "import socket\n",
     "import threading\n",
     "import torchvision.datasets as datasets\n",
@@ -26,97 +26,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "6780a712",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([10000, 28, 28])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def load_dataset():\n",
+    "def load_features():\n",
     "    mnist_trainset = datasets.MNIST(root='./data', train=True, download=True, transform=None)\n",
-    "    trainimages = mnist_trainset.data[50000:,:] #load the last 10,000 images leaving the rest for the clients private data\n",
-    "    return trainimages\n",
+    "    X_train = mnist_trainset.data[50000:,:] #load the last 10,000 images leaving the rest for the clients private data\n",
+    "    X_train = X_train.float().flatten(start_dim=1, end_dim=2) # Flatten training images\n",
+    "    return X_train\n",
+    "\n",
+    "def load_labels():\n",
+    "    mnist_trainset = datasets.MNIST(root='./data', train=True, download=True, transform=None)\n",
+    "    Y_train = mnist_trainset.targets[50000:] #load the last 10,000 images leaving the rest for the clients private data\n",
+    "    return Y_train\n",
     "\n",
     "NUM_CLIENTS = 10\n",
-    "NUM_ROUNDS = 10\n",
+    "NUM_ROUNDS = 20\n",
     "NUM_CLASSES = 10\n",
     "\n",
     "logits_dict = {}\n",
     "num_responses = 0\n",
     "agreggation_done = 0\n",
     "\n",
-    "public_data = load_dataset()\n",
-    "labels = np.empty(len(public_data))\n",
-    "print(public_data.shape)"
+    "X_pub = load_features()\n",
+    "Y_pub = load_labels()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2e1d57d1",
    "metadata": {},
    "outputs": [
     {
-     "ename": "OSError",
-     "evalue": "[Errno 48] Address already in use",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[SERVER] Listening on localhost:65437\n",
+      "[+] Connected: ('127.0.0.1', 38638)\n",
+      "Round 0 Aggregation\n",
+      "Round 1 Aggregation\n",
+      "Round 2 Aggregation\n",
+      "Round 3 Aggregation\n",
+      "Round 4 Aggregation\n",
+      "Round 5 Aggregation\n",
+      "[+] Connected: ('127.0.0.1', 52252)\n",
+      "Round 0 Aggregation\n",
+      "Round 1 Aggregation\n",
+      "Round 2 Aggregation\n",
+      "Round 3 Aggregation\n",
+      "Round 4 Aggregation\n",
+      "Round 5 Aggregation\n",
+      "Round 6 Aggregation\n",
+      "Round 7 Aggregation\n",
+      "Round 8 Aggregation\n",
+      "Round 9 Aggregation\n",
+      "[-] Disconnected: ('127.0.0.1', 52252)\n",
+      "[+] Connected: ('127.0.0.1', 55018)\n",
+      "Round 0 Aggregation\n",
+      "Round 1 Aggregation\n",
+      "Round 2 Aggregation\n",
+      "Round 3 Aggregation\n",
+      "Round 4 Aggregation\n",
+      "Round 5 Aggregation\n",
+      "Round 6 Aggregation\n",
+      "Round 7 Aggregation\n",
+      "[+] Connected: ('127.0.0.1', 40952)\n",
+      "Round 0 Aggregation\n",
+      "Round 1 Aggregation\n",
+      "Round 2 Aggregation\n",
+      "Round 3 Aggregation\n",
+      "Round 4 Aggregation\n",
+      "Round 5 Aggregation\n",
+      "Round 6 Aggregation\n",
+      "Round 7 Aggregation\n",
+      "Round 8 Aggregation\n",
+      "Round 9 Aggregation\n",
+      "[-] Disconnected: ('127.0.0.1', 40952)\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mOSError\u001b[39m                                   Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[44]\u001b[39m\u001b[32m, line 64\u001b[39m\n\u001b[32m     62\u001b[39m HOST = \u001b[33m\"\u001b[39m\u001b[33m127.0.0.1\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     63\u001b[39m PORT = \u001b[32m65435\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m64\u001b[39m \u001b[43mstart_server\u001b[49m\u001b[43m(\u001b[49m\u001b[43mHOST\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mPORT\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[44]\u001b[39m\u001b[32m, line 50\u001b[39m, in \u001b[36mstart_server\u001b[39m\u001b[34m(HOST, PORT)\u001b[39m\n\u001b[32m     48\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mstart_server\u001b[39m(HOST, PORT):\n\u001b[32m     49\u001b[39m     server = socket.socket(socket.AF_INET, socket.SOCK_STREAM)\n\u001b[32m---> \u001b[39m\u001b[32m50\u001b[39m     \u001b[43mserver\u001b[49m\u001b[43m.\u001b[49m\u001b[43mbind\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mHOST\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mPORT\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     51\u001b[39m     server.listen()\n\u001b[32m     53\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m[SERVER] Listening on \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mHOST\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m:\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mPORT\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mOSError\u001b[39m: [Errno 48] Address already in use"
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 49\u001b[39m\n\u001b[32m     47\u001b[39m HOST = \u001b[33m\"\u001b[39m\u001b[33mlocalhost\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     48\u001b[39m PORT = \u001b[32m65437\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m49\u001b[39m \u001b[43mstart_server\u001b[49m\u001b[43m(\u001b[49m\u001b[43mHOST\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mPORT\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 43\u001b[39m, in \u001b[36mstart_server\u001b[39m\u001b[34m(HOST, PORT)\u001b[39m\n\u001b[32m     38\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m[SERVER] Listening on \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mHOST\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m:\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mPORT\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     42\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m43\u001b[39m     conn, addr = \u001b[43mserver\u001b[49m\u001b[43m.\u001b[49m\u001b[43maccept\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     44\u001b[39m     thread = threading.Thread(target=handle_client, args=(conn, addr, X_pub), daemon=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m     45\u001b[39m     thread.start()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/lib64/python3.14/socket.py:298\u001b[39m, in \u001b[36msocket.accept\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    291\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34maccept\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m    292\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"accept() -> (socket object, address info)\u001b[39;00m\n\u001b[32m    293\u001b[39m \n\u001b[32m    294\u001b[39m \u001b[33;03m    Wait for an incoming connection.  Return a new socket\u001b[39;00m\n\u001b[32m    295\u001b[39m \u001b[33;03m    representing the connection, and the address of the client.\u001b[39;00m\n\u001b[32m    296\u001b[39m \u001b[33;03m    For IP sockets, the address info is a pair (hostaddr, port).\u001b[39;00m\n\u001b[32m    297\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m298\u001b[39m     fd, addr = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_accept\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    299\u001b[39m     sock = socket(\u001b[38;5;28mself\u001b[39m.family, \u001b[38;5;28mself\u001b[39m.type, \u001b[38;5;28mself\u001b[39m.proto, fileno=fd)\n\u001b[32m    300\u001b[39m     \u001b[38;5;66;03m# Issue #7995: if no default timeout is set and the listening\u001b[39;00m\n\u001b[32m    301\u001b[39m     \u001b[38;5;66;03m# socket had a (non-zero) timeout, force the new socket in blocking\u001b[39;00m\n\u001b[32m    302\u001b[39m     \u001b[38;5;66;03m# mode to override platform-specific socket flags inheritance.\u001b[39;00m\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
      ]
     }
    ],
    "source": [
-    "def aggregation_rule(logits_dict):\n",
-    "    global labels\n",
-    "    #TODO: Define aggregation [logits(CLIENTS, IMAGES, CLASSES)->in, labels(IMAGES)->out]\n",
-    "    aggregated_logits = np.empty_like(labels)\n",
-    "    labels = aggregated_logits\n",
-    "\n",
+    "def aggregation_rule(logits):\n",
+    "    # logits: (num_models, samples, classes)\n",
+    "    mean_logits = logits.mean(dim=0)\n",
+    "    labels = mean_logits.argmax(dim=1)\n",
+    "    return labels.long()\n",
     "\n",
     "def handle_client(conn, addr, public_data):\n",
-    "    global num_repsonses\n",
-    "    global logits_dict\n",
-    "    global labels\n",
+    "    X_pub = load_features()\n",
     "    print(f\"[+] Connected: {addr}\")\n",
     "\n",
     "    try:\n",
-    "        # INITIAL ROUND\n",
-    "        # 1. Send initial public data\n",
-    "        send_receive.send_numpy(conn, public_data.numpy())\n",
     "\n",
-    "        # 2. recieve public data logits\n",
-    "        logits = send_receive.recv_numpy(conn)\n",
-    "\n",
-    "        #TODO: Aggregate\n",
-    "        #Then update global var logit\n",
-    "        logits_dict[threading.get_ident()] = logits\n",
-    "        num_repsonses += 1\n",
-    "\n",
-    "        if num_responses >= NUM_CLIENTS:\n",
-    "            aggregation_rule(logits_dict)\n",
+    "        # SEND PUBLIC DATA\n",
+    "        send_tensor(conn, X_pub)\n",
     "        \n",
-    "        # SUBSEQUENT ROUNDS\n",
-    "        for i in range(NUM_ROUNDS):\n",
-    "            send_receive.send_numpy(conn, labels.numpy())\n",
+    "        for r in range(NUM_ROUNDS):\n",
     "\n",
-    "            logits = send_receive.recv_numpy(conn)\n",
+    "            print(f\"Round {r} Aggregation\")\n",
     "\n",
-    "            logits_dict[threading.get_ident()] = logits\n",
-    "            num_responses += 1\n",
+    "            logits = recv_tensor(conn)\n",
     "\n",
-    "            if num_responses >= NUM_CLIENTS:\n",
-    "                aggregation_rule(logits_dict)\n",
+    "            aggregate_logits = aggregation_rule(logits)\n",
+    "\n",
+    "            send_tensor(conn, aggregate_logits)\n",
     "\n",
     "    except ConnectionResetError:\n",
     "        print(f\"[-] Connection reset by {addr}\")\n",
@@ -126,6 +155,7 @@
     "\n",
     "def start_server(HOST, PORT):\n",
     "    server = socket.socket(socket.AF_INET, socket.SOCK_STREAM)\n",
+    "    server.setsockopt(socket.SOL_SOCKET, socket.SO_REUSEADDR, 1)\n",
     "    server.bind((HOST, PORT))\n",
     "    server.listen()\n",
     "\n",
@@ -135,18 +165,26 @@
     "\n",
     "    while True:\n",
     "        conn, addr = server.accept()\n",
-    "        thread = threading.Thread(target=handle_client, args=(conn, addr, public_data), daemon=True)\n",
+    "        thread = threading.Thread(target=handle_client, args=(conn, addr, X_pub), daemon=True)\n",
     "        thread.start()\n",
     "\n",
-    "HOST = \"127.0.0.1\"\n",
-    "PORT = 65436\n",
+    "HOST = \"localhost\"\n",
+    "PORT = 65437\n",
     "start_server(HOST, PORT)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fda9a54",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Honors_Proj",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -160,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
