--- a/client.ipynb
+++ b/client.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "59854674",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
     "\n",
     "    def forward(self, student_logits, teacher_logits):\n",
     "        student_log_probs = F.log_softmax(student_logits / self.T, dim=1)\n",
-    "        teacher_probs     = F.softmax(teacher_logits / self.T, dim=1)\n",
+    "        teacher_probs = F.softmax(teacher_logits / self.T, dim=1)\n",
     "        return self.kl(student_log_probs, teacher_probs) * (self.T ** 2)"
    ]
   },
@@ -421,7 +421,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
